syntax = "proto3";

import "google/protobuf/timestamp.proto";
import "google/protobuf/duration.proto";
//import "cosmos/base/v1beta1/coin.proto";
//import "gogoproto/gogo.proto";

package starscope.indexevent;

option go_package = "github.com/loomi-labs/star-scope/indexevent/indexevent";

message Coin {
  string denom = 1;
  string amount = 2;
}

message CoinReceivedEvent {
  string sender = 1;
  Coin coin = 2;
}

message OsmosisPoolUnlockEvent {
  google.protobuf.Duration duration = 1;
  google.protobuf.Timestamp unlock_time = 2;
}

message UnstakeEvent {
  google.protobuf.Timestamp completion_time = 1;
  Coin coin = 2;
}

message NeutronTokenVestingEvent {
  string wallet_address = 1;
  uint64 amount = 2;
  google.protobuf.Duration duration = 3;
  google.protobuf.Timestamp unlock_time = 4;
}

message TxEvent {
  uint64 chain_id = 1;
  string wallet_address = 2;
  google.protobuf.Timestamp timestamp = 3;
  google.protobuf.Timestamp notify_time = 4;
  oneof event {
    CoinReceivedEvent coin_received = 5;
    OsmosisPoolUnlockEvent osmosis_pool_unlock = 6;
    UnstakeEvent unstake = 7;
    NeutronTokenVestingEvent neutron_token_vesting = 8;
  }
}
